Bug 1214208: Do not use MP3Decoder on B2G. r=alfredo

the Gonk PDM doesn't support AudioOffloadPlayer leading to increased power consumption.